--- a/point/moisAvecPointer/index.html
+++ b/point/moisAvecPointer/index.html
@@ -53,8 +53,8 @@
                            depth: 0.75;
                            width: 2;height: 0.2"></a-mixin>
         <!-- Pour les jours -->
-        <a-mixin id="btnCal" rotation="180 90 90" jour-clickable
-                 data-nb-click="0" geometry="width:0.5;height:0.1;depth:0.5"
+        <a-mixin id="btnCal" rotation="90 90 90"
+                 geometry="width:0.5;height:0.1;depth:0.5"
                  material="opacity:0.2"></a-mixin>
         <!-- Aiguille -->
         <a-mixin id="aiguille" material="color:#a82121" rotation="90 0 0"
@@ -74,9 +74,28 @@
         <img id="t_7" src="img/jour/7.png">
         <img id="t_8" src="img/jour/8.png">
         <img id="t_9" src="img/jour/9.png">
-        <img id="t_0" src="img/jour/0.png">
-        <img id="t_ok" src="img/jour/ok.png">
-        <img id="t_reset" src="img/jour/reset.png">
+        <img id="t_10" src="img/jour/10.png">
+        <img id="t_11" src="img/jour/11.png">
+        <img id="t_12" src="img/jour/12.png">
+        <img id="t_13" src="img/jour/13.png">
+        <img id="t_14" src="img/jour/14.png">
+        <img id="t_15" src="img/jour/15.png">
+        <img id="t_16" src="img/jour/16.png">
+        <img id="t_17" src="img/jour/17.png">
+        <img id="t_18" src="img/jour/18.png">
+        <img id="t_19" src="img/jour/19.png">
+        <img id="t_20" src="img/jour/20.png">
+        <img id="t_21" src="img/jour/21.png">
+        <img id="t_22" src="img/jour/22.png">
+        <img id="t_23" src="img/jour/23.png">
+        <img id="t_24" src="img/jour/24.png">
+        <img id="t_25" src="img/jour/25.png">
+        <img id="t_26" src="img/jour/26.png">
+        <img id="t_27" src="img/jour/27.png">
+        <img id="t_28" src="img/jour/28.png">
+        <img id="t_29" src="img/jour/29.png">
+        <img id="t_30" src="img/jour/30.png">
+        <img id="t_31" src="img/jour/31.png">
         <!-- Textures mois -->
         <img id="jan" src="img/mois/jan.png">
         <img id="feb" src="img/mois/feb.png">
@@ -202,83 +221,83 @@
           <a-animation mixin="fade"></a-animation>
         </a-entity>
         <!-- 2e rangée -->
-        <a-entity class="choixJour" data-jour="7" mixin="btnCal" material="src:#t_1;" position="0 -0.6 0">
+        <a-entity class="choixJour" data-jour="7" mixin="btnCal" material="src:#t_7;" position="0 -0.6 0">
           <a-animation mixin="fade"></a-animation>
         </a-entity>
-        <a-entity class="choixJour" data-jour="8" mixin="btnCal" material="src:#t_2;" position="0.6 -0.6 0">
+        <a-entity class="choixJour" data-jour="8" mixin="btnCal" material="src:#t_8;" position="0.6 -0.6 0">
           <a-animation mixin="fade"></a-animation>
         </a-entity>
-        <a-entity class="choixJour" data-jour="9" mixin="btnCal" material="src:#t_3;" position="1.2 -0.6 0">
+        <a-entity class="choixJour" data-jour="9" mixin="btnCal" material="src:#t_9;" position="1.2 -0.6 0">
           <a-animation mixin="fade"></a-animation>
         </a-entity>
-        <a-entity class="choixJour" data-jour="10" mixin="btnCal" material="src:#t_4;" position="1.8 -0.6 0">
+        <a-entity class="choixJour" data-jour="10" mixin="btnCal" material="src:#t_10;" position="1.8 -0.6 0">
           <a-animation mixin="fade"></a-animation>
         </a-entity>
-        <a-entity class="choixJour" data-jour="11" mixin="btnCal" material="src:#t_5;" position="2.4 -0.6 0">
+        <a-entity class="choixJour" data-jour="11" mixin="btnCal" material="src:#t_11;" position="2.4 -0.6 0">
           <a-animation mixin="fade"></a-animation>
         </a-entity>
-        <a-entity class="choixJour" data-jour="12" mixin="btnCal" material="src:#t_6;" position="3 -0.6 0">
+        <a-entity class="choixJour" data-jour="12" mixin="btnCal" material="src:#t_12;" position="3 -0.6 0">
           <a-animation mixin="fade"></a-animation>
         </a-entity>
         <!-- 3e rangée -->
-        <a-entity class="choixJour" data-jour="13" mixin="btnCal" material="src:#t_1;" position="0 -1.2 0">
+        <a-entity class="choixJour" data-jour="13" mixin="btnCal" material="src:#t_13;" position="0 -1.2 0">
           <a-animation mixin="fade"></a-animation>
         </a-entity>
-        <a-entity class="choixJour" data-jour="14" mixin="btnCal" material="src:#t_2;" position="0.6 -1.2 0">
+        <a-entity class="choixJour" data-jour="14" mixin="btnCal" material="src:#t_14;" position="0.6 -1.2 0">
           <a-animation mixin="fade"></a-animation>
         </a-entity>
-        <a-entity class="choixJour" data-jour="15" mixin="btnCal" material="src:#t_3;" position="1.2 -1.2 0">
+        <a-entity class="choixJour" data-jour="15" mixin="btnCal" material="src:#t_15;" position="1.2 -1.2 0">
           <a-animation mixin="fade"></a-animation>
         </a-entity>
-        <a-entity class="choixJour" data-jour="16" mixin="btnCal" material="src:#t_4;" position="1.8 -1.2 0">
+        <a-entity class="choixJour" data-jour="16" mixin="btnCal" material="src:#t_16;" position="1.8 -1.2 0">
           <a-animation mixin="fade"></a-animation>
         </a-entity>
-        <a-entity class="choixJour" data-jour="17" mixin="btnCal" material="src:#t_5;" position="2.4 -1.2 0">
+        <a-entity class="choixJour" data-jour="17" mixin="btnCal" material="src:#t_17;" position="2.4 -1.2 0">
           <a-animation mixin="fade"></a-animation>
         </a-entity>
-        <a-entity class="choixJour" data-jour="18" mixin="btnCal" material="src:#t_6;" position="3 -1.2 0">
+        <a-entity class="choixJour" data-jour="18" mixin="btnCal" material="src:#t_18;" position="3 -1.2 0">
           <a-animation mixin="fade"></a-animation>
         </a-entity>
         <!-- 4e rangée -->
-        <a-entity class="choixJour" data-jour="19" mixin="btnCal" material="src:#t_1;" position="0 -1.8 0">
+        <a-entity class="choixJour" data-jour="19" mixin="btnCal" material="src:#t_19;" position="0 -1.8 0">
           <a-animation mixin="fade"></a-animation>
         </a-entity>
-        <a-entity class="choixJour" data-jour="20" mixin="btnCal" material="src:#t_2;" position="0.6 -1.8 0">
+        <a-entity class="choixJour" data-jour="20" mixin="btnCal" material="src:#t_20;" position="0.6 -1.8 0">
           <a-animation mixin="fade"></a-animation>
         </a-entity>
-        <a-entity class="choixJour" data-jour="21" mixin="btnCal" material="src:#t_3;" position="1.2 -1.8 0">
+        <a-entity class="choixJour" data-jour="21" mixin="btnCal" material="src:#t_21;" position="1.2 -1.8 0">
           <a-animation mixin="fade"></a-animation>
         </a-entity>
-        <a-entity class="choixJour" data-jour="22" mixin="btnCal" material="src:#t_4;" position="1.8 -1.8 0">
+        <a-entity class="choixJour" data-jour="22" mixin="btnCal" material="src:#t_22;" position="1.8 -1.8 0">
           <a-animation mixin="fade"></a-animation>
         </a-entity>
-        <a-entity class="choixJour" data-jour="23" mixin="btnCal" material="src:#t_5;" position="2.4 -1.8 0">
+        <a-entity class="choixJour" data-jour="23" mixin="btnCal" material="src:#t_23;" position="2.4 -1.8 0">
           <a-animation mixin="fade"></a-animation>
         </a-entity>
-        <a-entity class="choixJour" data-jour="24" mixin="btnCal" material="src:#t_6;" position="3 -1.8 0">
+        <a-entity class="choixJour" data-jour="24" mixin="btnCal" material="src:#t_24;" position="3 -1.8 0">
           <a-animation mixin="fade"></a-animation>
         </a-entity>
         <!-- 5e rangée -->
-        <a-entity class="choixJour" data-jour="25" mixin="btnCal" material="src:#t_1;" position="0 -2.4 0">
+        <a-entity class="choixJour" data-jour="25" mixin="btnCal" material="src:#t_25;" position="0 -2.4 0">
           <a-animation mixin="fade"></a-animation>
         </a-entity>
-        <a-entity class="choixJour" data-jour="26" mixin="btnCal" material="src:#t_2;" position="0.6 -2.4 0">
+        <a-entity class="choixJour" data-jour="26" mixin="btnCal" material="src:#t_26;" position="0.6 -2.4 0">
           <a-animation mixin="fade"></a-animation>
         </a-entity>
-        <a-entity class="choixJour" data-jour="27" mixin="btnCal" material="src:#t_3;" position="1.2 -2.4 0">
+        <a-entity class="choixJour" data-jour="27" mixin="btnCal" material="src:#t_27;" position="1.2 -2.4 0">
           <a-animation mixin="fade"></a-animation>
         </a-entity>
-        <a-entity class="choixJour" data-jour="28" mixin="btnCal" material="src:#t_4;" position="1.8 -2.4 0">
+        <a-entity class="choixJour" data-jour="28" mixin="btnCal" material="src:#t_28;" position="1.8 -2.4 0">
           <a-animation mixin="fade"></a-animation>
         </a-entity>
-        <a-entity class="choixJour" data-jour="29" mixin="btnCal" material="src:#t_5;" position="2.4 -2.4 0">
+        <a-entity class="choixJour" data-jour="29" mixin="btnCal" material="src:#t_29;" position="2.4 -2.4 0">
           <a-animation mixin="fade"></a-animation>
         </a-entity>
-        <a-entity class="choixJour" data-jour="30" mixin="btnCal" material="src:#t_6;" position="3 -2.4 0">
+        <a-entity class="choixJour" data-jour="30" mixin="btnCal" material="src:#t_30;" position="3 -2.4 0">
           <a-animation mixin="fade"></a-animation>
         </a-entity>
         <!-- 6e rangée -->
-        <a-entity class="choixJour" data-jour="31" mixin="btnCal" material="src:#t_1;" position="0 -3 0">
+        <a-entity class="choixJour" data-jour="31" mixin="btnCal" material="src:#t_31;" position="0 -3 0">
           <a-animation mixin="fade"></a-animation>
         </a-entity>
       </a-entity>
