--- a/test_CSV/index.html
+++ b/test_CSV/index.html
@@ -6,20 +6,31 @@
     		<title>Test CSV A-frame </title>
         <meta name="description" content="Reading csv file using javascript" />
         <meta name="author" content="Niko Girardelli"/>
-        <!--<script src="https://unpkg.com/super-hands@2.1.0/dist/super-hands.js"></script>-->
         <script src="https://aframe.io/releases/0.7.1/aframe.min.js"></script>
+        <script src="https://unpkg.com/super-hands@2.1.0/dist/super-hands.js"></script>
+        <script src="https://rawgit.com/chenzlabs/stats-in-vr/master/dist/aframe-stats-in-vr-component.min.js"></script>
         <script src="https://rawgit.com/feiss/aframe-environment-component/master/dist/aframe-environment-component.min.js"></script>
+        <!--<script src="https://unpkg.com/aframe-physics-extras/dist/aframe-physics-extras.js"></script>-->
         <script src="js/papaparse.min.js"></script>
         <script src="js/lire-csv.js"></script>
         </head>
         <body>
-          <a-scene stats background="color: red">
+          <a-scene stats stats-in-vr>
+            <a-assets>
+              <!-- to change touch mode collider -->
+              <a-mixin id="mytouch" physics-collider phase-shift
+                       collision-filter="collisionForces: false"
+                       static-body="shape: sphere; sphereRadius: 0.02"
+                       super-hands="colliderEvent: collisions; colliderEventProperty: els;
+                                    colliderEndEvent: collisions; colliderEndEventProperty: clearedEls;
+                                    colliderState:"></a-mixin>
+            </a-assets>
 
             <!-- Les mains -->
             <a-entity id="player" rafraichissement
                       progressive-controls="controllerModel:false;override:true;
-                                            maxLevel:point;touchMixin:mytouch;
-                                            pointMixin:mypoint;">
+                                            maxLevel:touch;touchMixin:mytouch;
+                                            pointMixin:mypoint;objects: .ligneGraphe;">
               <a-entity id="lhand" hand-controls="left"
                         teleport-controls="type:parabolic;"></a-entity>
               <a-entity id="rhand" hand-controls="right"
@@ -34,7 +45,7 @@
               <!-- le graphe -->
               <a-entity id="graphe" scale="2 2 2" rotation="0 90 0">
 
-                <!-- Axe Y - Incomes-->
+                <!-- Axe Y - Incomes
                 <a-entity>
                   <a-entity line__1a="start: -.8  0.25  .8;  end: -.8 0.25 -.8; color: white"
                             line__1b="start: -.8  0.25  -.8;  end: .8 0.25 -.8; color: white"
@@ -83,12 +94,121 @@
                   <a-text value="128k"  color="white"  width="5" wrap-count="180"  position="-.8 2.25  1" rotation="0 -90 0" ></a-text>
                   <a-text align="center" value="Income"  color="white"  width="5" wrap-count="180"  position="-.8  1.125  1.2" rotation="0 90 90" ></a-text>
                   <a-text align="center" value="Income"  color="white"  width="5" wrap-count="180"  position="-.8  1.125  1.2" rotation="0 -90 90" ></a-text>
-                </a-entity>
+                </a-entity>-->
 
                 <!-- Axe Z - Années -->
                 <a-entity position="0 0 0.9">
-                  <a-text value="1914" color="white" width="2" wrap-count="180" position="-.95 .03 -0.03" rotation="-90 0 0" ></a-text>
-                  <a-text value="1915" color="white" width="2" wrap-count="180" position="-.95 .03 -0.06" rotation="-90 0 0" ></a-text>
+                  <a-text
+                  value= "1914
+                          1915
+                          1916
+                          1917
+                          1918
+                          1919
+                          1920
+                          1921
+                          1922
+                          1923
+                          1924
+                          1925
+                          1926
+                          1927
+                          1928
+                          1929
+                          1930
+                          1931
+                          1932
+                          1933
+                          1934
+                          1935
+                          1936
+                          1937
+                          1938
+                          1939
+                          1940
+                          1941
+                          1942
+                          1943
+                          1944
+                          1945
+                          1946
+                          1947
+                          1948
+                          1949
+                          1950
+                          1951
+                          1952
+                          1953
+                          1954
+                          1955
+                          1956
+                          1957
+                          1958
+                          1959
+                          1960
+                          1961
+                          1962
+                          1963
+                          1964
+                          1965
+                          1966
+                          1967
+                          1968
+                          1949
+                          1950
+                          1951
+                          1952
+                          1953
+                          1954
+                          1955
+                          1956
+                          1957
+                          1958
+                          1959
+                          1960
+                          1961
+                          1962
+                          1963
+                          1964
+                          1965
+                          1966
+                          1967
+                          1968
+                          1981
+                          1982
+                          1983
+                          1984
+                          1985
+                          1986
+                          1987
+                          1988
+                          1989
+                          1990
+                          1991
+                          1992
+                          1993
+                          1994
+                          1995
+                          1996
+                          1997
+                          1998
+                          1999
+                          2000
+                          2001
+                          2002
+                          2003
+                          2004
+                          2005
+                          2006
+                          2007
+                          2008
+                          2009
+                          2010
+                          2011
+                          2012
+                          2013
+                          2014" color="white" width="2" wrap-count="180" position="-.95 .03 -0.03" rotation="-90 0 0" ></a-text>
+                  <!--<a-text value="1915" color="white" width="2" wrap-count="180" position="-.95 .03 -0.06" rotation="-90 0 0" ></a-text>
                   <a-text value="1916" color="white" width="2" wrap-count="180" position="-.95 .03 -0.09" rotation="-90 0 0" ></a-text>
                   <a-text value="1917" color="white" width="2" wrap-count="180" position="-.95 .03 -0.12" rotation="-90 0 0" ></a-text>
                   <a-text value="1918" color="white" width="2" wrap-count="180" position="-.95 .03 -0.15" rotation="-90 0 0" ></a-text>
@@ -195,11 +315,11 @@
                   <a-text value="2011" color="white" width="2" wrap-count="180" position="-.95 .03 -3.18" rotation="-90 0 0" ></a-text>
                   <a-text value="2012" color="white" width="2" wrap-count="180" position="-.95 .03 -3.21" rotation="-90 0 0" ></a-text>
                   <a-text value="2013" color="white" width="2" wrap-count="180" position="-.95 .03 -3.24" rotation="-90 0 0" ></a-text>
-                  <a-text value="2014" color="white" width="2" wrap-count="180" position="-.95 .03 -3.27"   rotation="-90 0 0" ></a-text>
+                  <a-text value="2014" color="white" width="2" wrap-count="180" position="-.95 .03 -3.27"   rotation="-90 0 0" ></a-text>-->
                   <a-text align="center" value="Years" color="white"  width="5" wrap-count="180"  position="-1.1 .03 0" rotation="-90 90 0" ></a-text>
                 </a-entity>
 
-                <!-- Axe X - Life Expectency -->
+                <!-- Axe X - Life Expectency
                 <a-entity rotation="0 270 0" position="-0.9 0 1.78">
                   <a-text value="0" color="white" width="5" wrap-count="180" position="-.95 .03 -0.1" rotation="-90 0 0" ></a-text>
                   <a-text value="1" color="white" width="5" wrap-count="180" position="-.95 .03 -0.2" rotation="-90 0 0" ></a-text>
@@ -304,9 +424,9 @@
                   <a-text value="100" color="white" width="5" wrap-count="180" position="-.95 .03 -30.3" rotation="-90 0 0" ></a-text>
 
                   <a-text align="center" value="Life Expectency" color="white"  width="5" wrap-count="180"  position="-0.7 .03 -2.05" rotation="-90 90 0" ></a-text>
-                </a-entity>
+                </a-entity>-->
 
-                <!-- Ligne noir au sol -->
+                <!-- Ligne noir au sol
                 <a-entity>
                   <a-entity line__a="start: -.8  0.05  -.8; end: .8 0.05 -.8; color: black"
                             line__b="start: -.8  0.05  -.7; end: .8 0.05 -.7; color: black"
@@ -342,7 +462,7 @@
                             line__ga="start: .3  0.05  -.8;  end: .3 0.05 .8; color: black"
                             line__ha="start: .2  0.05  -.8;  end: .2 0.05 .8; color: black"
                             line__ja="start: .1  0.05  -.8;  end: .1 0.05 .8; color: black"></a-entity>
-                </a-entity>
+                </a-entity>-->
 
                 <!-- Le sol et la bordure -->
                 <a-entity class="solGraphe" static-body position="1.87 0 0">
