--- a/point/vivantDansLeGraphe/index.html
+++ b/point/vivantDansLeGraphe/index.html
@@ -17,6 +17,8 @@
     <!--    <script src="https://unpkg.com/super-hands@2.1.0/dist/super-hands.js"></script>
     <script src="components/changement-outil.js"></script>-->
     <script src="components/pays-selection.js"></script>
+    <script src="components/snap.js"></script>
+    <script src="components/ligne-du-temps.js"></script>
     <script src="js/papaparse.min.js"></script>
     <script src="js/lire-csv.js"></script>
     <script src="js/graphe-creation.js"></script>
@@ -29,9 +31,16 @@
                                 horizonColor: #ddd; fog: 0.1;
                                 groundColor: #454545; groundColor2: #5d5d5d;
                                 groundTexture:none;
-                                skyType:gradient;">
+                                skyType:gradient;
+                                ground:none">
 
       <a-assets>
+        <!-- Repère timeline -->
+        <a-mixin id="ligneTemps"
+                 geometry="primitive: box; height: 1; width: 0.25; depth: 0.25"
+                 material="color:orange;shader: standard;"
+                 snap="offset: 0.125 0.125 0.125; snap: 0.25 0.25 0.25"></a-mixin>
+
         <!-- Ui texte -->
         <a-mixin id="textContinent"
                  text="alphaTest:0.6;
@@ -109,6 +118,7 @@
         <audio id="desert" loop='true' autoplay="true"
         src="audio/Desert sound - Sound effect.mp3"></audio>-->
         <img id="gapminder" src="img/gap.png">
+        <img id="uv_grid_lrg" src="img/UV_Grid_Lrg.jpg">
       </a-assets>
 
       <!-- Les mains -->
@@ -116,6 +126,17 @@
                 progressive-controls="controllerModel:false;override:true;
                                       maxLevel:point;touchMixin:mytouch;
                                       pointMixin:mypoint;">
+        <a-camera id="head" camera="far:5000;"wasd-controls look-controls>
+          <!-- Annee texte -->
+          <a-text id="anneeTexte"
+                   text="alphaTest:0.6;
+                         tabSize: 0; width: 10;
+                         baseline: top; wrapCount: 4;
+                         letterSpacing: 0.3;
+                         align:center;color:#808080;
+                         anchor:center;zOffset:-30;
+                         baseline:center;value:2018;"></a-text>
+        </a-camera>
         <a-entity id="lhand" vive-controls="hand: left;model:false">
           <!-- UI -->
           <a-entity id="ui-parent" position="0 0 -0.07" scale="0.15 0.15 0.15" rotation="-45 0 0">
@@ -269,8 +290,9 @@
           </a-entity>
         </a-entity>
         <a-entity id="rhand" laser-controls="hands:right"
-                  raycaster="far: 0.5;"
-                  line="color: #22D1EE; opacity: 0.75"></a-entity><!-- teleport-controls="type:parabolic;" changement-outil -->
+
+                  line="color: #22D1EE; opacity: 0.75"
+                  ligne-du-temps="event:click;mixin:ligneTemps"></a-entity><!-- teleport-controls="type:parabolic;" changement-outil -->
       </a-entity>
 
       <!-- Graphe -->
@@ -286,6 +308,19 @@
         depthTest: false;"></a-box>
       </a-entity>
 
+      <a-box mixin="ligneTemps" position="1.5 0.25 0"></a-box>
+      <a-box mixin="ligneTemps" material="color:red"position="1.25 0.25 0"></a-box>
+      <a-box mixin="ligneTemps" material="color:blue"position="1 0.25 0"></a-box>
+      <a-box mixin="ligneTemps" material="color:yellow"position="0.75 0.25 0"></a-box>
+      <a-box mixin="ligneTemps" material="color:green"position="0.5 0.25 0"></a-box>
+      <a-box mixin="ligneTemps" material="color:purple"position="0.25 0.25 0"></a-box>
+      <a-box mixin="ligneTemps" material="color:pink"position="0 0.25 0"></a-box>
+      <a-box mixin="ligneTemps" material="color:red"position="-0.25 0.25 0"></a-box>
+      <a-box mixin="ligneTemps" material="color:blue"position="-0.5 0.25 0"></a-box>
+      <a-box mixin="ligneTemps" material="color:grey"position="-0.75 0.25 0"></a-box>
+      <a-box mixin="ligneTemps" material="color:pink"position="-1 0.25 0"></a-box>
+      <a-box mixin="ligneTemps" material="color:black"position="-1.25 0.25 0"></a-box>
+      <a-box mixin="ligneTemps" position="-1.5 0.25 0"></a-box>
       <!-- Titre du graphe -->
       <a-sphere scale="0.4 0.4 0.4" material="repeat:1.0 1.0; src: #gapminder; shader: standard; side: double;"
                 position="-0.75 3.1 -3.1" geometry="primitive:circle;radius:1.04">
@@ -294,6 +329,10 @@
         <a-text value="Choose countries by clicking on them and witness the result on the graph on your right."
                 position="1.8 -1.8 0" text="color:#d9ad28;wrapCount:25.68;side: double;align:center;"></a-text>
       </a-sphere>
+
+      <a-cylinder  radius="30" height="0.1"
+      material="src:url(https://cdn.rawgit.com/donmccurdy/aframe-extras/v1.16.3/assets/grid.png);
+      repeat:120.0 120.0;"></a-cylinder>
 
       <!-- Son -->
       <a-entity sound="src:#desert" position="0 0 0"></a-entity>
