--- a/point/vivantDansLeGraphe/index.html
+++ b/point/vivantDansLeGraphe/index.html
@@ -19,6 +19,7 @@
     <script src="components/pays-selection.js"></script>
     <script src="components/snap.js"></script>
     <script src="components/ligne-du-temps.js"></script>
+    <script src="components/interaction-graphe.js"></script>
     <script src="js/papaparse.min.js"></script>
     <script src="js/lire-csv.js"></script>
     <script src="js/graphe-creation.js"></script>
@@ -122,7 +123,7 @@
       </a-assets>
 
       <!-- Les mains -->
-      <a-entity id="player" rafraichissement
+      <a-entity id="player" rafraichissement interaction-graphe
                 progressive-controls="controllerModel:false;override:true;
                                       maxLevel:point;touchMixin:mytouch;
                                       pointMixin:mypoint;">
@@ -292,7 +293,7 @@
         <a-entity id="rhand" laser-controls="hands:right"
 
                   line="color: #22D1EE; opacity: 0.75"
-                  ligne-du-temps="event:click;mixin:ligneTemps"></a-entity><!-- teleport-controls="type:parabolic;" changement-outil -->
+                  ></a-entity><!-- teleport-controls="type:parabolic;" changement-outil ligne-du-temps="event:click;mixin:ligneTemps"-->
       </a-entity>
 
       <!-- Graphe -->
@@ -308,19 +309,19 @@
         depthTest: false;"></a-box>
       </a-entity>
 
-      <a-box mixin="ligneTemps" position="1.5 0.25 0"></a-box>
-      <a-box mixin="ligneTemps" material="color:red"position="1.25 0.25 0"></a-box>
-      <a-box mixin="ligneTemps" material="color:blue"position="1 0.25 0"></a-box>
-      <a-box mixin="ligneTemps" material="color:yellow"position="0.75 0.25 0"></a-box>
-      <a-box mixin="ligneTemps" material="color:green"position="0.5 0.25 0"></a-box>
-      <a-box mixin="ligneTemps" material="color:purple"position="0.25 0.25 0"></a-box>
-      <a-box mixin="ligneTemps" material="color:pink"position="0 0.25 0"></a-box>
-      <a-box mixin="ligneTemps" material="color:red"position="-0.25 0.25 0"></a-box>
-      <a-box mixin="ligneTemps" material="color:blue"position="-0.5 0.25 0"></a-box>
-      <a-box mixin="ligneTemps" material="color:grey"position="-0.75 0.25 0"></a-box>
-      <a-box mixin="ligneTemps" material="color:pink"position="-1 0.25 0"></a-box>
-      <a-box mixin="ligneTemps" material="color:black"position="-1.25 0.25 0"></a-box>
-      <a-box mixin="ligneTemps" position="-1.5 0.25 0"></a-box>
+
+      <a-box geometry="heigth:1.5;width:0.25;depth:0.5" material="color:red"position="1.5 0.25 0"></a-box>
+      <a-box geometry="heigth:1.5;width:0.25;depth:0.5" material="color:blue"position="1.2 0.25 0"></a-box>
+      <a-box geometry="heigth:1.5;width:0.25;depth:0.5" material="color:yellow"position="0.9 0.25 0"></a-box>
+      <a-box geometry="heigth:1.5;width:0.25;depth:0.5" material="color:green"position="0.6 0.25 0"></a-box>
+      <a-box geometry="heigth:1.5;width:0.25;depth:0.5" material="color:purple"position="0.3 0.25 0"></a-box>
+      <a-box geometry="heigth:1.5;width:0.25;depth:0.5" material="color:pink"position="0 0.25 0"></a-box>
+      <a-box geometry="heigth:1.5;width:0.25;depth:0.5" material="color:red"position="-0.3 0.25 0"></a-box>
+      <a-box geometry="heigth:1.5;width:0.25;depth:0.5" material="color:blue"position="-0.6 0.25 0"></a-box>
+      <a-box geometry="heigth:1.5;width:0.25;depth:0.5" material="color:grey"position="-0.9 0.25 0"></a-box>
+      <a-box geometry="heigth:1.5;width:0.25;depth:0.5" material="color:pink"position="-1.2 0.25 0"></a-box>
+      <a-box geometry="heigth:1.5;width:0.25;depth:0.5" material="color:black"position="-1.5 0.25 0"></a-box>
+
       <!-- Titre du graphe -->
       <a-sphere scale="0.4 0.4 0.4" material="repeat:1.0 1.0; src: #gapminder; shader: standard; side: double;"
                 position="-0.75 3.1 -3.1" geometry="primitive:circle;radius:1.04">
